--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
     "method-override": "^3.0.0",
-    "mongoose": "^6.8.3"
+    "mongoose": "^6.8.3",
+    "morgan": "^1.10.0"
   }
 }
