--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "joi": "^17.7.0",
+    "joi-objectid": "^4.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^6.8.3",
     "morgan": "^1.10.0",
