--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
   "author": "Blaise Maria James",
   "license": "ISC",
   "dependencies": {
-    "@mapbox/mapbox-sdk": "^0.14.0",
+    "@mapbox/mapbox-sdk": "^0.15.0",
     "cloudinary": "^1.33.0",
     "connect-flash": "^0.1.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
+    "helmet": "^6.0.1",
     "joi": "^17.7.0",
     "joi-objectid": "^4.0.2",
     "method-override": "^3.0.0",
@@ -26,6 +28,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^7.1.2"
+    "passport-local-mongoose": "^7.1.2",
+    "sanitize-html": "^2.9.0"
   }
 }
