--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
+    "readline-sync": "^1.4.10",
     "sanitize-html": "^2.9.0"
   }
 }
